--- a/index.html
+++ b/index.html
@@ -89,18 +89,19 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h2>About The Event</h2>
-            <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
-              accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
-              est ut optio sequi unde.</p>
+            <h2>SISTEMA DE TRANSFORMAÇÃO CORPORAL</h2>
+            <p>Olá! Estou muito animado em compartilhar com você este produto incrível que vai mudar a sua vida. Eu estou falando do [nome do produto], um produto de alta performance que é capaz de [benefícios do produto].
+
+              Este produto é feito com a mais alta qualidade e tecnologia de ponta, o que significa que ele é capaz de fazer o que nenhum outro produto é capaz. Ele é [características do produto], o que faz com que ele se destaque da multidão.
+              </p>
           </div>
           <div class="col-lg-3">
-            <h3>Where</h3>
-            <p>Downtown Conference Center, New York</p>
+            <h3>Saiba o segredo</h3>
+            <p>LINK</p>
           </div>
           <div class="col-lg-3">
-            <h3>When</h3>
-            <p>Monday to Wednesday<br>10-12 December</p>
+            <h3>ANCORAGEM</h3>
+            <p>ANCORAGEM DE PREÇO COM CALL TO ACTION<br>EVENTO</p>
           </div>
         </div>
       </div>
@@ -112,8 +113,8 @@
     <section id="speakers" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
-          <h2>Event Speakers</h2>
-          <p>Here are some of our speakers</p>
+          <h2>CHAMADAS PARA AÇÕES</h2>
+          <p>EVENTOS CORPORATIVOS COM LINKS PARA COMPRAR OS ITENS</p>
         </div>
 
         <div class="row">
@@ -218,24 +219,23 @@
     <section id="schedule" class="section-with-bg">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h2>Event Schedule</h2>
-          <p>Here is our event schedule</p>
+          <h2>CASO CRIADO O EVENTO A LIVE/CHAMADA GRAVADA VAI AO AR AQUI</h2>
+          <p>TUDO LINK PARA ENTRETER O CLIENTE</p>
         </div>
 
         <ul class="nav nav-tabs" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">Day 1</a>
+            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">DICA 1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">Day 2</a>
+            <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">DICA 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#day-3" role="tab" data-toggle="tab">Day 3</a>
+            <a class="nav-link" href="#day-3" role="tab" data-toggle="tab">DICA 3 GRATUITAS FORNECIDAS PELO AFILIADO</a>
           </li>
         </ul>
 
-        <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius
-          necessitatibus voluptatem quis labore perspiciatis quia.</h3>
+        <h3 class="sub-heading">ANCORAGEM</h3>
 
         <div class="tab-content row justify-content-center">
 
@@ -245,7 +245,7 @@
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:30 AM</time></div>
               <div class="col-md-10">
-                <h4>Registration</h4>
+                <h4>COMENTÁRIOS DE SOLUÇÕES COM O PRODUTO</h4>
                 <p>Fugit voluptas iusto maiores temporibus autem numquam magnam.</p>
               </div>
             </div>
@@ -470,8 +470,7 @@
     </section>
 
     <!--==========================
-      Venue Section
-    ============================-->
+      
     <section id="venue" class="wow fadeInUp">
 
       <div class="container-fluid">
@@ -570,9 +569,12 @@
 
     </section>
 
-    <!--==========================
-      Hotels Section
+    Venue Section
     ============================-->
+
+
+    <!--==========================
+      H
     <section id="hotels" class="section-with-bg wow fadeInUp">
 
       <div class="container">
@@ -638,6 +640,9 @@
 
     </section>
 
+    otels Section
+    ============================-->
+
     <!--==========================
       Gallery Section
     ============================-->
@@ -645,8 +650,8 @@
 
       <div class="container">
         <div class="section-header">
-          <h2>Gallery</h2>
-          <p>Check our gallery from the recent events</p>
+          <h2>GALERIA PARA DIFERENTES VALORES SE CASO HOUVER DO PRODUTO</h2>
+          <p>CALL TO ACTION PARA COMPRA APÓS A ANCORAGEM</p>
         </div>
       </div>
 
@@ -670,7 +675,7 @@
 
       <div class="container">
         <div class="section-header">
-          <h2>Sponsors</h2>
+          <h2>PATROCÍNIOS</h2>
         </div>
 
         <div class="row no-gutters supporters-wrap clearfix">
@@ -737,7 +742,7 @@
       <div class="container">
 
         <div class="section-header">
-          <h2>F.A.Q </h2>
+          <h2>F.A.Q TIRAR DUVIDAS </h2>
         </div>
 
         <div class="row justify-content-center">
@@ -745,7 +750,7 @@
               <ul id="faq-list">
 
                 <li>
-                  <a data-toggle="collapse" class="collapsed" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="fa fa-minus-circle"></i></a>
+                  <a data-toggle="collapse" class="collapsed" href="#faq1"> COMO ESTE PRODUTO FUNCIONA ... <i class="fa fa-minus-circle"></i></a>
                   <div id="faq1" class="collapse" data-parent="#faq-list">
                     <p>
                       Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
@@ -812,8 +817,8 @@
     <section id="subscribe">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h2>Newsletter</h2>
-          <p>Rerum numquam illum recusandae quia mollitia consequatur.</p>
+          <h2>REMARKETING</h2>
+          <p>RECEBA O PRODUTO NA PORTA DE SUA CASA</p>
         </div>
 
         <form method="POST" action="#">
@@ -837,8 +842,8 @@
       <div class="container">
 
         <div class="section-header">
-          <h2>Buy Tickets</h2>
-          <p>Velit consequatur consequatur inventore iste fugit unde omnis eum aut.</p>
+          <h2> DIFERENTES ESCOLHAS PARA O MESMO SEGMENTO </h2>
+          <p>AQUI PODEMOS VALIDAR OS PRODUTOS E PASSAR PARA A FASE DE ESCALABILIDADE</p>
         </div>
 
         <div class="row">
@@ -956,8 +961,8 @@
       <div class="container">
 
         <div class="section-header">
-          <h2>Contact Us</h2>
-          <p>Nihil officia ut sint molestiae tenetur.</p>
+          <h2>CONTATO</h2>
+          <p>MARKETING/REMARKETING</p>
         </div>
 
         <div class="row contact-info">
@@ -966,14 +971,14 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <address>SOROCITY</address>
             </div>
           </div>
 
           <div class="col-md-4">
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
-              <h3>Phone Number</h3>
+              <h3>WHATSAPP</h3>
               <p><a href="tel:+155895548855"> FONE</a></p>
             </div>
           </div>
@@ -1030,7 +1035,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <!--img src="img/logo.png" alt="TheEvenet"-->
-            <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p>
+            <p>Então, se você está procurando um produto que pode ajudá-lo a atingir o seu potencial máximo, o [nome do produto] é a escolha perfeita para você. Não perca mais tempo e adquira agora mesmo o seu [nome do produto] para começar a desfrutar dos benefícios que ele oferece. Você não vai se arrepender</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
@@ -1081,7 +1086,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>TheEvent</strong>. All Rights Reserved
+        &copy; Copyright <strong>eEmpire</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
