--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0">ALTA PERFORMACE<br><span> DESPERTE</span> SEU POTENCIAL</h1>
-      <p class="mb-4 pb-0">01 DE MARÇO, O SEGREDO DO EMAGRECIMENTO REVELADO</p>
+      <h1 class="mb-4 pb-0">ALTA PERFORMACE<br><span> DESPERTE</span> SEU POTENCIAL HOJE MESMO</h1>
+      <p class="mb-4 pb-0"> O SEGREDO DO EMAGRECIMENTO REVELADO EM POUCOS PASSOS</p>
       <a href="https://youtu.be/gkaJiPm9obA" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
       <a href="https://go.hotmart.com/A80260502N?ap=8b97" class="about-btn scrollto">VER MAIS</a>
@@ -90,7 +90,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h2>SISTEMA DE TRANSFORMAÇÃO CORPORAL</h2>
-            <p>Olá! Estou muito animado em compartilhar com você este produto incrível que vai mudar a sua vida. Eu estou falando do [nome do produto], um produto de alta performance que é capaz de [benefícios do produto].
+            <p>Olá! Estou muito animado em compartilhar com você este produto incrível que vai mudar a sua vida. Eu estou falando do S T C, um produto de alta performance que é capaz de [benefícios do produto].
 
               Este produto é feito com a mais alta qualidade e tecnologia de ponta, o que significa que ele é capaz de fazer o que nenhum outro produto é capaz. Ele é [características do produto], o que faz com que ele se destaque da multidão.
               </p>
