--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
         -->
-        Designed by <a href="https://bootstrapmade.com/">eEmpire 2023</a>
+        Designed by <a href="https://empirestc.github.io/">eEmpire 2023</a>
       </div>
     </div>
   </footer><!-- #footer -->
